--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,9 @@
 .kotlin
 
 /log
-bulid
-!**/src/main/**/bulid
-!**/src/test/**/bulid
+build
+!**/src/main/**/build
+!**/src/test/**/build
 
 application-prod.yml
 application-local.yml
